restructuring file naming convention

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,6 @@
 ---
-title: Home | NWA Second Stage Transition's a place for you when you need help the most.
+title: Home | NWA Second Stage Transition ~ a place for you when you need help the most.
+description: Welcome to NWA Second Stage Transition where we provide a variety of services from counseling, classes, group meet-ups, and more to help families/individuals deal with alcohol/drug abuse, domestic violence, parenting issues, and more.
 layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: follow
