--- a/src/_layouts/base_v2.njk
+++ b/src/_layouts/base_v2.njk
@@ -5,11 +5,8 @@ templateEngineOverride: njk,md
 <html lang="en">
   <head>
     {% include '../_includes/head/head_v1.njk' %}
-    <title>{{ title }}</title>{% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/img/trees-along-path-1920.webp'}}" as="image">{% endif %}{% if page.fileSlug == '/admin/'%}<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" as="script" defer>
-    <meta http-equiv="expires" content="4500"/>
-    <meta name="robots" content="{{robots}}"/>
     </head>
+  <!-- layout: {{layout}} -->
   <body class="text">
     <header>
       <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-blue">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
@@ -19,6 +16,6 @@ templateEngineOverride: njk,md
     </div>
     <footer class="bg-blue">{% include '../_includes/footer.html' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="{{site.url + '/js/custom.js'}} defer"></script>
+    <script src="{{site.url + '/js/custom.js'}}" defer></script>
   </body>
 </html>
