fixed missing css for dropdown

--- a/src/about.njk
+++ b/src/about.njk
@@ -1,6 +1,6 @@
 ---
 title: About | NWA Second Stage Transition's story is one of hope for those in need.
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: follow
 ---
