--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,6 +1,6 @@
 ---
 title: Contact | Connect with NWA Second Stage Transition 
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: follow
 ---
