--- a/src/donation-completed.njk
+++ b/src/donation-completed.njk
@@ -1,6 +1,6 @@
 ---
 title: Donation to NWASST Completed
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: noindex
 ---
