--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -1,6 +1,6 @@
 ---
 title: Get Involved | NWA SST is a place where you can help those in need.
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: follow
 ---
