--- a/src/404.njk
+++ b/src/404.njk
@@ -1,6 +1,6 @@
 ---
 title: 404 Error | NWASST's missing website page.
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 permalink: 404.html
 robots: noindex
