changed file structure and modified header

--- a/src/_includes/breadcrumb/breadcrumb_v2.njk
+++ b/src/_includes/breadcrumb/breadcrumb_v2.njk
@@ -1,5 +1,6 @@
 ---
 ---
+<!-- outreach page: breadcrumb_v2 -->
 <ol class="breadcrumb">
   <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url}} target="_self" rel="noopener noreferrer"">Home</a></li>
   <li class="breadcrumb-item breadcrumb-link"><a href="{{site.url + '/outreach/'}} target="_self" rel="noopener noreferrer"">Outreach</a></li>
