--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -1,5 +1,5 @@
 ---
-layout: base.njk
+layout: base_v2.njk
 title: Outreach | Community is where we see our greatest opportunities.
 ---
 <!-- Page Intro -->
