--- a/src/services.njk
+++ b/src/services.njk
@@ -1,6 +1,6 @@
 ---
 title: Services | NWASST has a variety of services to help you. Like Assessment, Counseling, Parenting Class, Support Group, and more.
-layout: base.njk
+layout: base_v2.njk
 templateEngineOverride: njk,md
 robots: follow
 ---
