--- a/src/_includes/head/head_v1.njk
+++ b/src/_includes/head/head_v1.njk
@@ -8,6 +8,7 @@
 <meta content="{{description}}" name="description">
 <meta http-equiv="expires" content="7889400"/> <!-- 6 months-->
 <meta name="robots" content="{{robots}}"/>
+{% if page.fileSlug == ''%}<link rel="canonical" href="{{site.url}}"/>{% endif %}
 <link href="{{site.url + '/img/nwasst-logo-80.webp'}}" rel="shortcut icon" type="image/png">
 <link href="{{site.url + '/sitemap.xml'}}" rel="sitemap" title="Sitemap" type="application/xml">
 <link rel="stylesheet" href="{{site.url + '/css/bootstrap_v1.css'}}">
