--- a/src/_layouts/base_v2.njk
+++ b/src/_layouts/base_v2.njk
@@ -9,13 +9,14 @@ templateEngineOverride: njk,md
   <!-- layout: {{layout}} -->
   <body class="text">
     <header>
-      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-blue">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
+      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-blue">{% include '../_includes/header/header_v1.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumb/breadcrumb_v2.njk' %}{% else %}{% include '../_includes/breadcrumb/breadcrumb_v1.njk' %}{% endif %}</nav>{% endif %}
     </header>
     <div class="{{ 'landing' if page.fileSlug == ''}}">
       <main class="d-flex container flex-column">{{ content | safe }}</main>
     </div>
-    <footer class="bg-blue">{% include '../_includes/footer.html' %}</footer>
+    <footer class="bg-blue">{% include '../_includes/footer/footer_v1.njk' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>{% include '../_includes/script/script_v1.njk' %}</script>
     <script src="{{site.url + '/js/custom.js'}}" defer></script>
   </body>
 </html>
