--- a/src/_layouts/redirect.njk
+++ b/src/_layouts/redirect.njk
@@ -4,7 +4,7 @@ templateEngineOverride: njk,md
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% include '../_includes/head.njk' %}
+    {% include '../_includes/head/head_v1.njk' %}
     <meta http-equiv="refresh" content="3;" URL="{{ site.url + redirect.to }}">
     <title>Redirecting to: {{ destination }}</title>
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" as="script" defer>
@@ -13,13 +13,13 @@ templateEngineOverride: njk,md
   </head>
   <body class="text ">
     <header>
-      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumbs/outreach-bc.njk' %}{% else %}{% include '../_includes/breadcrumbs/base-bc.njk' %}{% endif %}</nav>{% endif %}
+      <div  class="navbar navbar-expand-md navbar-dark bd-navbar bg-primary">{% include '../_includes/header/header_v1.njk' %}</div>{% if page.fileSlug != "" %}<nav aria-label="breadcrumb" class="container">{% if '/outreach/*' in page.url %}{% include '../_includes/breadcrumb/breadcrumb_v2.njk' %}{% else %}{% include '../_includes/breadcrumb/breadcrumb_v1.njk' %}{% endif %}</nav>{% endif %}
     </header>
     <div class="{{ 'landing' if page.fileSlug == ''}}">
       <main class="d-flex container flex-column">{{ content | safe }}</main>
     </div>
-    <footer class="bg-primary">{% include '../_includes/footer.html' %}</footer>
+    <footer class="bg-primary">{% include '../_includes/footer/footer_v1.njk' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="{{site.url + '/js/custom.js'}} defer"></script>
+    {% include '../_includes/script/script_v1.njk' %}
   </body>
 </html>
