--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,17 +1,19 @@
 ---
-title: Contact | Connect with NWA Second Stage Transition 
 layout: base_v2.njk
-templateEngineOverride: njk,md
-robots: follow
+title: Contact
+subtitle: NWASST looks forward to hearing from you.
+description: NWASST We can be reached by messaging on Facebook, email, phone, or complete this form.
+robots: follow, index
 ---
-<!-- Page Intro -->
+<!-- {{title}} page -->
+<!-- page intro -->
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Contact</h1>
   </div>
 </div>
-<!-- End Page Intro -->
-<!-- Contact -->
+<!-- end page intro -->
+<!-- contact info-->
 <div class="row p-3 text-center align-content-evenly">
   <div class="col-lg-4">
     <h2 class="h2">Location</h2>
@@ -33,7 +35,7 @@ robots: follow
     </span>
   </div>
 </div>
-<!-- End Contact -->
+<!-- end contact info-->
 <!-- iframe -->
 <div class="container py-3">
   <div class="contact-form d-flex flex-row justify-content-center">
@@ -42,4 +44,5 @@ robots: follow
     </div>
   </div>
 </div>
-<!-- End iframe -->
+<!-- end iframe -->
+<!-- end {{title}} page -->
