--- a/src/donation-completed.njk
+++ b/src/donation-completed.njk
@@ -1,7 +1,8 @@
 ---
-title: Donation to NWASST Completed
 layout: base_v2.njk
-templateEngineOverride: njk,md
+title: NWASST Donation Completion
+subtitle: Your NWASST Donation was completed
+description: Your NWASST donation was completed, if you have any concerns please contact us at {{site.email}}
 robots: noindex
 ---
 <!-- Donation Cancelation section -->
