--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -1,6 +1,9 @@
 ---
 layout: base_v2.njk
-title: Outreach | Community is where we see our greatest opportunities.
+title: Outreach
+subtitle:  Community is where we see our greatest opportunities.
+description: We are happy to be part of a thriving community!
+robots: follow, index
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
