--- a/src/sign-up/assessment.njk
+++ b/src/sign-up/assessment.njk
@@ -1,7 +1,8 @@
 ---
-title: Assessment Sign-up
 layout: base_v2.njk
-templateEngineOverride: njk,md
+title: Assessment Sign-up
+subtitle: Let's get started!
+description: NWASST's assessment sign-up so that we can see if we are a good fit for each other.
 robots: noindex
 ---
 <div class="container py-3">
