--- a/src/sign-up/class-group.njk
+++ b/src/sign-up/class-group.njk
@@ -1,7 +1,8 @@
 ---
-title: Class or Group Sign-up
 layout: base_v2.njk
-templateEngineOverride: njk,md
+title: Class or Group Sign-up
+subtitle: Let's get started!
+description: NWASST looks forward to seeing you at one of our classes or group meet-ups.
 robots: noindex
 ---
 <div class="container py-3">
