--- a/src/404.njk
+++ b/src/404.njk
@@ -1,11 +1,12 @@
 ---
-title: 404 Error | NWASST's missing website page.
 layout: base_v2.njk
-templateEngineOverride: njk,md
 permalink: 404.html
+title: 404 Error
+subtitle: We were unable to locate your requested page.
+description: The information requested from NWASST is no longer located at the requested URL.
 robots: noindex
 ---
-<!-- Page Intro -->
+<!-- {{title + 'page'}} -->
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Error 404</h1>
@@ -15,4 +16,4 @@ robots: noindex
     </p>
   </div>
 </div>
-<!-- End Page Intro -->
+<!-- End {{title + 'page'}} -->
