--- a/src/_layouts/base_v2.njk
+++ b/src/_layouts/base_v2.njk
@@ -3,9 +3,7 @@ templateEngineOverride: njk,md
 ---
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% include '../_includes/head/head_v1.njk' %}
-    </head>
+  <head>{% include '../_includes/head/head_v1.njk' %}</head>
   <!-- layout: {{layout}} -->
   <body class="text">
     <header>
@@ -16,7 +14,6 @@ templateEngineOverride: njk,md
     </div>
     <footer class="bg-blue">{% include '../_includes/footer/footer_v1.njk' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>{% include '../_includes/script/script_v1.njk' %}</script>
-    <script src="{{site.url + '/js/custom.js'}}" defer></script>
+    {% include '../_includes/script/script_v1.njk' %}
   </body>
 </html>
