--- a/src/about.njk
+++ b/src/about.njk
@@ -1,10 +1,15 @@
 ---
-title: About | NWA Second Stage Transition's story is one of hope for those in need.
 layout: base_v2.njk
-templateEngineOverride: njk,md
-robots: follow
+title: About
+subtitle: We were unable to locate your requested page.
+description: The information requested from NWASST is no longer located at the requested URL.
+robots: follow, index
+imgpath: '/img/carousels/'
+images: ['counselor.jpg', 'counseling.jpg', 'parenting-group.jpg', 'sunrise.jpg' ]
+alt: ['a counselor', 'different words being used to describe Counseling', 'a group of parents and kids discussing issues.', 'someone enjoying the a sunrise or sunset.']
 ---
-<!-- Page Intro -->
+<!-- {{ title }} Page -->
+<!-- intro -->
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Our Story</h1>
@@ -16,7 +21,7 @@ robots: follow
         be unique and valuable.</p>
   </div>
 </div>
-<!-- End Page Intro -->
+<!-- end intro -->
 <!-- aboutCarousel -->
 <div id="aboutCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
   data-bs-keyboard="true">
@@ -62,9 +67,9 @@ robots: follow
   <span class="visually-hidden">Next</span>
 </button>
 </div>
-<!-- END aboutCarousel -->
+<!-- end aboutCarousel -->
 <hr id="ourTeam" class="featurette-divider">
-<!-- Our Team -->
+<!-- ourTeam -->
 <div class="p-3 text-center">
   <div class="col-md-11 mx-auto my-3 ">
     <h2 class="h2 display-4 pb-3 fw-normal">Our Team</h2>
@@ -102,7 +107,7 @@ robots: follow
     </div>
   </div>
 </div>
-<!-- END Our Team -->
+<!-- end ourTeam -->
 <hr class="featurette-divider">
 <!-- imgCarousel -->
 <div id="imgCarousel" class="carousel carousel-dark slide " data-bs-interval="8000" data-bs-ride="carousel"
@@ -117,28 +122,28 @@ robots: follow
     <div class="carousel-item active">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a counselor" class="d-block fuild-img" src="{{site.url + '/img/carousels/counselor.jpg'}}">
+          <img alt="{{alt[0]}}" class="d-block fuild-img" src="{{site.url +  imgpath + images[0]}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a picture with different words being used to describe Counseling" class="d-block fuild-img" src="{{site.url + '/img/carousels/counseling.jpg'}}">
+          <img alt="{{alt[1]}}" class="d-block fuild-img" src="{{site.url + imgpath + images[1]}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="a group of parents and kids discussion issues." class="d-block fuild-img w-50" src="{{site.url + '/img/carousels/parenting-group.jpg'}}">
+          <img alt="{{alt[2]}}" class="d-block fuild-img w-50" src="{{site.url +  imgpath + images[2]}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="someone enjoying the a sunrise or sunset." style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url + '/img/carousels/sunrise.jpg'}}">
+          <img alt="{{alt[3]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url +  imgpath + images[3]}}">
         </div>
       </div>
     </div>
@@ -152,4 +157,5 @@ robots: follow
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<!-- END imgCarousel -->  
+<!-- end imgCarousel -->  
+<!-- end {{ title }} page -->  
