--- a/src/donation-canceled.njk
+++ b/src/donation-canceled.njk
@@ -1,10 +1,11 @@
 ---
-title: Donation to NWASST Canceled
 layout: base_v2.njk
-templateEngineOverride: njk,md
+title: NWASST Donation Cancelation
+subtitle: Your NWASST Donation was canceled
+description: Your NWASST donation was canceled, if you have any concerns please contact us at {{site.email}}
 robots: noindex
 ---
-<!-- Donation Cancelation section -->
+<!-- {{title}} page -->
 <div id="ourStory" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
   <div class="col-md-6 mx-auto my-3 border border-warning border-4 rounded alert alert-warning" role="alert">
     <h1 class="display-4 pb-3 fw-normal">Your donation was canceled.</h1>
@@ -19,4 +20,4 @@ robots: noindex
   <div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 </div>
-<!-- END Donation Cancelation section -->
+<!-- end {{title}} page -->
