--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -1,8 +1,12 @@
 ---
-title: Get Involved | NWA SST is a place where you can help those in need.
 layout: base_v2.njk
-templateEngineOverride: njk,md
-robots: follow
+title: Get Involved
+subtitle: NWASST is a place where you can help those in need.
+description: Your interest in volunteering is greatly appreciated, if you have any concerns please contact us at {{site.email}}
+robots: follow, index
+imgPath: '/img/partners/'
+images: ['arvest-foundation-logo.png', 'nwa-naturals-logo.jpg']
+alt: ["Arvest Foundation", "NWA Naturals"]
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
@@ -40,10 +44,10 @@ robots: follow
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 bg-white-transparent rounded max-width flex-row d-flex justify-content-evenly">
     <div class="col-lg-2 text-center  p-3">
-      <img class="img-fluid partner-img py-5" src="{{site.url + '/img/partners/arvest-foundation-logo.png'}}" alt="Arvest Foundation">
+      <img class="img-fluid partner-img py-5" src="{{site.url + imgPath + images[0]}}" alt="{{alt[0]}}">
     </div>
     <div class="col-lg-2 text-center  p-3">
-      <img class="img-fluid partner-img py-5" src="{{site.url + '/img/partners/nwa-naturals-logo.jpg'}}" alt="NWA Naturals">
+      <img class="img-fluid partner-img py-5" src="{{site.url + imgPath + images[1]}}" alt="{{alt[1]}}">
     </div>
   </div>
 </div>
