--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,9 @@
 ---
-title: Home | NWA Second Stage Transition ~ a place for you when you need help the most.
-description: Welcome to NWA Second Stage Transition where we provide a variety of services from counseling, classes, group meet-ups, and more to help families/individuals deal with alcohol/drug abuse, domestic violence, parenting issues, and more.
 layout: base_v2.njk
-templateEngineOverride: njk,md
-robots: follow
+title: Home
+subtitle: NWA Second Stage Transition ~ a place for you when you need help the most.
+description: Welcome to NWA Second Stage Transition where we provide a variety of services from counseling, classes, group meet-ups, and more to help families/individuals deal with alcohol/drug abuse, domestic violence, parenting issues, and more.
+robots: follow, index
 ---
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
