new img file structure

--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -4,7 +4,6 @@ title: Get Involved
 subtitle: NWASST is a place where you can help those in need.
 description: Your interest in volunteering is greatly appreciated, if you have any concerns please contact us at {{site.email}}
 robots: follow, index
-imgPath: '/img/partners/'
 images: ['arvest-foundation-logo.png', 'nwa-naturals-logo.jpg']
 alt: ["Arvest Foundation", "NWA Naturals"]
 ---
@@ -44,10 +43,10 @@ alt: ["Arvest Foundation", "NWA Naturals"]
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 bg-white-transparent rounded max-width flex-row d-flex justify-content-evenly">
     <div class="col-lg-2 text-center  p-3">
-      <img class="img-fluid partner-img py-5" src="{{site.url + imgPath + images[0]}}" alt="{{alt[0]}}">
+      <img class="img-fluid partner-img py-5" src="{{site.img_url + images[0]}}" alt="{{alt[0]}}">
     </div>
     <div class="col-lg-2 text-center  p-3">
-      <img class="img-fluid partner-img py-5" src="{{site.url + imgPath + images[1]}}" alt="{{alt[1]}}">
+      <img class="img-fluid partner-img py-5" src="{{site.img_url + images[1]}}" alt="{{alt[1]}}">
     </div>
   </div>
 </div>
