--- a/src/services.njk
+++ b/src/services.njk
@@ -4,7 +4,7 @@ title: Services
 subtitle: NWASST is here for you!
 description: NWASST has a variety of services to help you. Like Assessment, Counseling, Parenting Class, Support Group, and more.
 robots: follow, index
-imgpath: '/img/carousels/'
+imgpath: '/img/'
 images: ['group-discussion.jpg', 'nwasst-office.jpg', 'selfhelp-books.jpg']
 alt: ["Support Group", "NWASST's Office", "Self help books"]
 ---
@@ -150,21 +150,21 @@ alt: ["Support Group", "NWASST's Office", "Self help books"]
         <div class="carousel-item active">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="{{alt[0]}}" class="d-block fuild-img" src="{{site.url + imgpath + images[0]}}">
+              <img alt="{{alt[0]}}" class="d-block fuild-img" src="{{site.img_url + images[0]}}">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="{{alt[1]}}" class="d-block fuild-img" src="{{site.url + imgpath + images[1]}}">
+              <img alt="{{alt[1]}}" class="d-block fuild-img" src="{{site.img_url + images[1]}}">
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption align-items-center h-75">
-              <img alt="{{alt[2]}}" class="d-block fuild-img" src="{{site.url + imgpath + images[2]}}">
+              <img alt="{{alt[2]}}" class="d-block fuild-img" src="{{site.img_url + images[2]}}">
             </div>
           </div>
         </div>
