--- a/src/about.njk
+++ b/src/about.njk
@@ -122,28 +122,28 @@ alt: ['a counselor', 'different words being used to describe Counseling', 'a gro
     <div class="carousel-item active">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="{{alt[0]}}" class="d-block fuild-img" src="{{site.url +  imgpath + images[0]}}">
+          <img alt="{{alt[0]}}"style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[0]}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="{{alt[1]}}" class="d-block fuild-img" src="{{site.url + imgpath + images[1]}}">
+          <img alt="{{alt[1]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[1]}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="{{alt[2]}}" class="d-block fuild-img w-50" src="{{site.url +  imgpath + images[2]}}">
+          <img alt="{{alt[2]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img w-50" src="{{site.img_url + images[2]}}">
         </div>
       </div>
     </div>
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
-          <img alt="{{alt[3]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.url +  imgpath + images[3]}}">
+          <img alt="{{alt[3]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[3]}}">
         </div>
       </div>
     </div>
