--- a/src/donation-canceled.njk
+++ b/src/donation-canceled.njk
@@ -8,8 +8,8 @@ robots: noindex
 <!-- {{title}} page -->
 <div id="ourStory" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
   <div class="col-md-6 mx-auto my-3 border border-warning border-4 rounded alert alert-warning" role="alert">
-    <h1 class="display-4 pb-3 fw-normal">Your donation was canceled.</h1>
-    <p class="lead fw-normal">Thank you for thinking of us.</p>
+    <h1 class="h1">Your donation was canceled.</h1>
+    <p class="lead p-3">Thank you for thinking of us.</p>
   </div>
       <p class="py-3">
       Any further questions? <a href="mailto:{{site.email}}">Contact us</a>
