--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -11,7 +11,7 @@ alt: ["Arvest Foundation", "NWA Naturals"]
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Get Involved</h1>
-    <p class="lead">Volunteers needed to assist with financial planning, transportation, health & wellness, life skills training, mentoring, 
+    <p class="lead p-3">Volunteers needed to assist with financial planning, transportation, health & wellness, life skills training, mentoring, 
       counseling, community outreach, and Arts therapy classes. If any of this sounds interesting to you, please reach out to us.</p>
     <p>
       <a class="btn btn-lg btn-outline-primary lead" href="mailto:{{ site.email }}" target="_self" rel="noopener noreferrer" >Email Us</a>
