--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -8,7 +8,7 @@ robots: follow, index
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
-    <h1 class="cover-heading">Outreach</h1>
+    <h1 class="h1">Outreach</h1>
     <p class="pb-3 lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab fugit, excepturi obcaecati
       sed, quasi officiis quis quod magni ut placeat a voluptatum debitis porro dolores.</p>
   </div>
