--- a/src/index.njk
+++ b/src/index.njk
@@ -10,13 +10,13 @@ alt: ["You are invited to learn about a variety of mental health organizations t
 ---
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
-    <h1 class="h1">Open to the community!</h1>
-    <p class="lead p-3 ">We are hosting a networking event the Siloam Spring Library. The public is invited to hear from agencies like United Way, Canopy NWA, Genesis House, Compassion House, Juvenile Probation, the Village, Demand Project (Human Tracking), Choices Pregnancy, Panther Health and wellness, Habitat for Huminitic, CRC Vocational Rehabilitation, Kind At Heart, and many more</p>
+    <h1 class="h1">Networking Event 9/27/2022!</h1>
+    <p class="lead p-3 ">This event is open to the public. NWA Second Stage Transition will be hosting a networking event the Siloam Spring Library. The public is invited to hear from agencies like United Way, Canopy NWA, Genesis House, Compassion House, Juvenile Probation, the Village, Demand Project (Human Tracking), Choices Pregnancy, Panther Health and wellness, Habitat for Huminitic, CRC Vocational Rehabilitation, Kind At Heart, and many more</p>
     <p class="lead mt-3"><a class="phone-link" href="tel:14795493737"  target="_self" rel="noopener noreferrer" title="phone">Call 479-549-3737 to learn more</a></p>
   </div>
 </div>
 <div class="row justify-content-center text-center">
-  <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
+  <div class="col-md-10 p-3 my-5  rounded max-width">
     <img src="{{ site.url + '/img/' + images[0]}}" height="673" width="773" alt="{{alt[0]}}">
   </div>
 </div>
