--- a/src/index.njk
+++ b/src/index.njk
@@ -17,6 +17,6 @@ alt: ["You are invited to learn about a variety of mental health organizations t
 </div>
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 my-5  rounded max-width">
-    <img src="{{ site.url + '/img/' + images[0]}}" height="673" width="773" alt="{{alt[0]}}">
+    <img class="img-fluid py-5" height="673" width="773" src="{{site.img_url + images[0]}}" alt="{{alt[0]}}">
   </div>
 </div>
