--- a/src/index.njk
+++ b/src/index.njk
@@ -5,18 +5,16 @@ title: Home
 subtitle: NWA Second Stage Transition ~ a place for you when you need help the most.
 description: Welcome to NWA Second Stage Transition where we provide a variety of services from counseling, classes, group meet-ups, and more to help families/individuals deal with alcohol/drug abuse, domestic violence, parenting issues, and more.
 robots: follow, index
-images: ["community-invite-9-27-2022.png"]
+images: ["community-invite-9-27-20.22png"]
 alt: ["You are invited to learn about a variety of mental health organizations that are doing awesome things in our community."]
+landing: false
 ---
 <div class="row justify-content-center text-center">
-  <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
+  <div class="col-md-10  p-2 my-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Networking Event 9/27/2022!</h1>
-    <p class="lead p-3 ">This event is open to the public. NWA Second Stage Transition will be hosting a networking event the Siloam Spring Library. The public is invited to hear from agencies like United Way, Canopy NWA, Genesis House, Compassion House, Juvenile Probation, the Village, Demand Project (Human Tracking), Choices Pregnancy, Panther Health and wellness, Habitat for Huminitic, CRC Vocational Rehabilitation, Kind At Heart, and many more</p>
-    <p class="lead mt-3"><a class="p-2 m-2 btn text-black bg-warning phone-link" href="tel:14795493737"  target="_self" rel="noopener noreferrer" title="phone">Call 479-549-3737 for more info.</a></p>
+    <p class="lead p-3 ">This event is open to the public. NWA Second Stage Transition will be hosting a networking event at Siloam Spring Library. The public is invited to hear from agencies like United Way, Canopy NWA, Genesis House, Compassion House, Juvenile Probation, the Village, Demand Project (Human Tracking), Choices Pregnancy, Panther Health and wellness, Habitat for Huminitic, CRC Vocational Rehabilitation, Kind At Heart, and many more</p>
+    <p class="lead mt-2"><a class="p-2 m-2 btn text-black bg-warning phone-link" href="tel:14795493737"  target="_self" rel="noopener noreferrer" title="phone">Call 479-549-3737 for more info.</a></p>
   </div>
-</div>
-<div class="row justify-content-center text-center">
-  <div class="col-md-10 p-3 my-5  rounded max-width">
-    <img class="img-fluid py-5" height="673" width="773" src="{{site.img_url + images[0]}}" alt="{{alt[0]}}">
-  </div>
+  <!-- height="673" width="773" -->
+  <img class="img-fluid partner-img py-2" src="{{site.img_url + images[0]}}" alt="{{alt[0]}}">
 </div>
