--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -15,22 +15,22 @@ html {
     height: 100%;
     width: 100%;
   }
-  
+  /*
   #below-fold {
     display: table important; 
     height: 100%;
     width: 100%;
   }
-  
+  */
   .max-width {
-    max-width: 720px important;
+    max-width: 720px !important;
   }
   
   /* iframe formating */
   
   #contact-iframe {
-    min-width: 640 important!; 
-    min-height: 1082 important!;
+    min-width: 640 !important; 
+    min-height: 1082 !important;
     border: auto; 
     margin-top: auto;
     margin-bottom: auto;
@@ -89,7 +89,7 @@ html {
   
   .landing {
     background-image: url("https://nwasecondstagetransition.org/img/trees-along-path-1920.webp");
-    max-height: 100vh;
+    max-height: 110vh;
     min-height: 100vh;
     /* Full height */
     width: 100%;
@@ -103,7 +103,7 @@ html {
   }
   
   main {
-    padding-bottom: 4rem;
+    padding-bottom: 10rem;
   }
   /*********************** color ******************************************/
   .bg-white-transparent {
