--- a/src/index.njk
+++ b/src/index.njk
@@ -15,6 +15,7 @@ landing: false
     <p class="lead p-3 ">This event is open to the public. NWA Second Stage Transition will be hosting a networking event at Siloam Spring Library. The public is invited to hear from agencies like United Way, Canopy NWA, Genesis House, Compassion House, Juvenile Probation, the Village, Demand Project (Human Tracking), Choices Pregnancy, Panther Health and wellness, Habitat for Huminitic, CRC Vocational Rehabilitation, Kind At Heart, and many more</p>
     <p class="lead mt-2"><a class="p-2 m-2 btn text-black bg-warning phone-link" href="tel:14795493737"  target="_self" rel="noopener noreferrer" title="phone">Call 479-549-3737 for more info.</a></p>
   </div>
-  </br><!-- height="673" width="773" -->
-  <img class="img-fluid partner-img py-2" src="{{site.img_url + images[0]}}" alt="{{alt[0]}}">
+  <p><!-- height="673" width="773" -->
+    <img class="img-fluid partner-img py-2" src="{{site.img_url + images[0]}}" alt="{{alt[0]}}">
+  </p>
 </div>
