--- a/src/about.njk
+++ b/src/about.njk
@@ -74,9 +74,9 @@ alt: ['a counselor', 'different words being used to describe Counseling', 'a gro
     <h2 class="h2 display-4 pb-3 fw-normal">Our Team</h2>
   </div>
   <div class="col-md-11 mx-1 my-3 ">
-    <p class="p-3 lead">Our professional staffs are here to help you understand how to deal with difficult situations. 
-      On staff, we have Licensed Professional Counselors (LPC), Licensed Drug & Alcohol Counselors (LDAC), Advanced Alcohol & Drug 
-      Counselors (AADC), Certified Parenting Instructors (CPI), Certified Anger Management Specialists (CAMS), Domestic Violence Advocate (DVA)</p>
+    <p class="p-3 lead">
+      Our volunteers' staff, includes Licensed Professional Counselors (LPC), Licensed Drug & Alcohol Counselors (LDAC), Advanced Alcohol & Drug Counselors (AADC), and Clinical Supervisor for Drug and Alcohol, Pastoral Counseling (PC), Certified Parenting Instructor (CPI), Certified Anger Management Specialists (CAMS), and Domestic Violence Advocacy (DVA).
+    </p>
   </div>
 </div>
 <div class="p-3 text-center">
@@ -89,20 +89,34 @@ alt: ['a counselor', 'different words being used to describe Counseling', 'a gro
 </div>
 <div class="p-3 text-center">
   <div class="col-md-11 mx-auto my-3 ">
+    <h3 class="h3">Volunteers</h3>
+  </div>
+  <div class="row pb-3 justify-content-evenly">
+    <div class="col-lg-2 text-center">
+      <h4 class="h4">Dr. Caroll Doyle</h4>
+      <span>Pastoral Counseling</span>
+    </div>
+    <div class="col-lg-2 text-center">
+      <h4 class="h4">Ben Silbernagel</h4>
+      <span>Website Management</span>
+    </div>
+</div>
+<div class="p-3 text-center">
+  <div class="col-md-11 mx-auto my-3 ">
     <h3 class="h3">Board of Directors</h3>
   </div>
   <div class="row pb-3 justify-content-evenly">
     <div class="col-lg-2 text-center">
-      <h3 class="h4">Kormah Dorko</h3>
+      <h4 class="h4">Kormah Dorko</h4>
     </div>
     <div class="col-lg-2 text-center">
-      <h3 class="h4">Dwight Hignite</h3>
+      <h4 class="h4">Dwight Hignite</h4>
     </div>
     <div class="col-lg-2 text-center">
-      <h3 class="h4">Samuel Jackson</h3>
+      <h4 class="h4">Samuel Jackson</h4>
     </div>
     <div class="col-lg-2 text-center">
-      <h3 class="h4">Phil Gilbreath</h3>
+      <h4 class="h4">Phil Gilbreath</h4>
     </div>
   </div>
 </div>
