removed about and services from redirect

--- a/src/redirect.njk
+++ b/src/redirect.njk
@@ -16,8 +16,8 @@ pagination:
   alias: redirect
 # Add your redirection tuples to this list!
 redirects:
-  - {"from": "/about.html", "to": "/about/"}
-  - {"from": "/services.html", "to": "/services/"}
+  # - {"from": "/about.html", "to": "/about/"}
+  # - {"from": "/services.html", "to": "/services/"}
   - {"from": "/donate.html", "to": "/get-involved/"}
   - {"from": "/connect.html", "to": "/contact/"}
   - {"from": "/events.html", "to": "/outreach/"}
