working on 301 redirects

--- a/src/miscellaneous/redirect.njk
+++ b/src/miscellaneous/redirect.njk
@@ -1,5 +1,5 @@
 ---
-layout: redirect
+layout: redirect_v1
 title: Redirect
 subtitle: Something went wrong when we were directing you to the resource you were looking for.
 description: Please follow the provided link to the information you were looking for. If this is not what you were looking for please email us at {{site.email}}.
