--- a/src/404.njk
+++ b/src/404.njk
@@ -4,7 +4,7 @@ permalink: 404.html
 title: 404 Error
 subtitle: We were unable to locate your requested page.
 description: The information requested from NWASST is no longer located at the requested URL.
-robots: noindex
+robots: index
 ---
 <!-- {{title + 'page'}} -->
 <div class="row justify-content-center text-center">
