reworked pages to include meta data for rel: canonical

--- a/src/404.njk
+++ b/src/404.njk
@@ -4,6 +4,7 @@ permalink: 404.html
 title: 404 Error
 subtitle: We were unable to locate your requested page.
 description: The information requested from NWASST is no longer located at the requested URL.
+rel: canonical 
 robots: index
 ---
 <!-- {{title + 'page'}} -->
