--- a/src/admin/index.njk
+++ b/src/admin/index.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Content Manager
 subtitle:  Portal for posting articles to the NWASST's Outreach page.
 description: Admin portal for posting articles to the outreach page.
+rel: canonical
 robots: noindex
 ---
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
