--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Contact
 subtitle: NWASST looks forward to hearing from you.
 description: NWASST We can be reached by messaging on Facebook, email, phone, or complete this form.
+rel: canonical 
 robots: follow, index
 ---
 <!-- {{title}} page -->
