--- a/src/donation-canceled.njk
+++ b/src/donation-canceled.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: NWASST Donation Cancelation
 subtitle: Your NWASST Donation was canceled
 description: Your NWASST donation was canceled, if you have any concerns please contact us at {{site.email}}
+rel: canonical 
 robots: noindex
 ---
 <!-- {{title}} page -->
