--- a/src/donation-completed.njk
+++ b/src/donation-completed.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: NWASST Donation Completion
 subtitle: Your NWASST Donation was completed
 description: Your NWASST donation was completed, if you have any concerns please contact us at {{site.email}}
+rel: canonical
 robots: noindex
 ---
 <!-- Donation Cancelation section -->
