--- a/src/get-involved.njk
+++ b/src/get-involved.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Get Involved
 subtitle: NWASST is a place where you can help those in need.
 description: Your interest in volunteering is greatly appreciated, if you have any concerns please contact us at {{site.email}}
+rel: canonical 
 robots: follow, index
 images: ['arvest-foundation-logo.png', 'nwa-naturals-logo.jpg']
 alt: ["Arvest Foundation", "NWA Naturals"]
