--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Outreach
 subtitle:  Community is where we see our greatest opportunities.
 description: We are happy to be part of a thriving community!
+rel: canonical 
 robots: follow, index
 ---
 <!-- Page Intro -->
