--- a/src/services.njk
+++ b/src/services.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Services  
 subtitle: NWASST is here for you!
 description: NWASST has a variety of services to help you. Like Assessment, Counseling, Parenting Class, Support Group, and more.
+rel: canonical 
 robots: follow, index
 images: ['group-discussion.jpg', 'nwasst-office.jpg', 'selfhelp-books.jpg']
 alt: ["Support Group", "NWASST's Office", "Self help books"]
