--- a/src/sign-up/class-group.njk
+++ b/src/sign-up/class-group.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Class or Group Sign-up
 subtitle: Let's get started!
 description: NWASST looks forward to seeing you at one of our classes or group meet-ups.
+rel: canonical
 robots: noindex
 ---
 <div class="container py-3">
