--- a/src/about.njk
+++ b/src/about.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: About
 subtitle: We were unable to locate your requested page.
 description: The information requested from NWASST is no longer located at the requested URL.
+rel: canonical 
 robots: follow, index
 images: ['counselor.jpg', 'counseling.jpg', 'parenting-group.jpg', 'sunrise.jpg' ]
 alt: ['a counselor', 'different words being used to describe Counseling', 'a group of parents and kids discussing issues.', 'someone enjoying the a sunrise or sunset.']
