--- a/src/sign-up/assessment.njk
+++ b/src/sign-up/assessment.njk
@@ -3,6 +3,7 @@ layout: base_v2.njk
 title: Assessment Sign-up
 subtitle: Let's get started!
 description: NWASST's assessment sign-up so that we can see if we are a good fit for each other.
+rel: canonical
 robots: noindex
 ---
 <div class="container py-3">
