removed some things from the sitemap

--- a/src/admin/index.njk
+++ b/src/admin/index.njk
@@ -5,6 +5,7 @@ subtitle:  Portal for posting articles to the NWASST's Outreach page.
 description: Admin portal for posting articles to the outreach page.
 rel: canonical
 robots: noindex
+eleventyExcludeFromCollections: true
 ---
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 <!-- {{ title }} Page -->
