--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -5,6 +5,7 @@ subtitle:  Community is where we see our greatest opportunities.
 description: We are happy to be part of a thriving community!
 rel: canonical 
 robots: follow, index
+eleventyExcludeFromCollections: true
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
