removed last two imgs for carousel

--- a/src/about.njk
+++ b/src/about.njk
@@ -5,8 +5,8 @@ subtitle: We were unable to locate your requested page.
 description: The information requested from NWASST is no longer located at the requested URL.
 rel: canonical 
 robots: follow, index
-images: ['counselor.jpg', 'counseling.jpg', 'parenting-group.jpg', 'sunrise.jpg' ]
-alt: ['a counselor', 'different words being used to describe Counseling', 'a group of parents and kids discussing issues.', 'someone enjoying the a sunrise or sunset.']
+images: ['counselor.jpg', 'counseling.jpg']
+alt: ['a counselor', 'different words being used to describe Counseling']
 ---
 <!-- {{ title }} Page -->
 <!-- intro -->
@@ -129,8 +129,6 @@ alt: ['a counselor', 'different words being used to describe Counseling', 'a gro
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#imgCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -144,20 +142,6 @@ alt: ['a counselor', 'different words being used to describe Counseling', 'a gro
       <div class="container">
         <div class="carousel-caption align-items-center w-75">
           <img alt="{{alt[1]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[1]}}">
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="container">
-        <div class="carousel-caption align-items-center w-75">
-          <img alt="{{alt[2]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img w-50" src="{{site.img_url + images[2]}}">
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="container">
-        <div class="carousel-caption align-items-center w-75">
-          <img alt="{{alt[3]}}" style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[3]}}">
         </div>
       </div>
     </div>
