--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -11,8 +11,9 @@ eleventyExcludeFromCollections: true
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
     <h1 class="h1">Outreach</h1>
-    <p class="pb-3 lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab fugit, excepturi obcaecati
-      sed, quasi officiis quis quod magni ut placeat a voluptatum debitis porro dolores.</p>
+    <p class="pb-3 lead">Welcome everyone! This years events have been going great. We have had great reception with in the community and we are 
+      starting to see the impact on our clients lives.
+    </p>
   </div>
 </div>
 <!-- End Page Intro -->
