--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -6,6 +6,8 @@ description: We are happy to be part of a thriving community!
 rel: canonical 
 robots: follow, index
 eleventyExcludeFromCollections: true
+images: ['nwasst-bikes-for-jobs.jpg', 'nwasst-daycare-classes.jpg','nwasst-non-profit-conference-2022-1.jpg','nwasst-presentation-1.jpg']
+alt: ['bikes for transport to work', 'class about starting a daycare','Non-Profit Conference 2022','NWASST Community Presentation']
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
@@ -19,15 +21,47 @@ eleventyExcludeFromCollections: true
 <!-- End Page Intro -->
 <hr class="featurette-divider">
 <!-- Wrap the rest of the page in another container to center all the content. -->
-<div class="container">
-  <!-- Three columns of text below the carousel -->
-  <div id="team" class="row w-75 mx-auto">
-    <div class="col-lg-12">
-      {% for post in collections.post | reverse %}<article>
-        <h2><a class="" href="{{ post.url | url }}" target="_self" rel="noopener noreferrer">{{ post.data.title }}</a></h2>
-        <p>{{ post.data.publishDate | postDate }}</p>
-      </article>
-      {% endfor %}</div><!-- /.col-lg-12 -->
-  </div><!-- /.row -->
-  <!-- END Team Section -->
+
+<div class="p-3 text-center">
+  <div class="col-md-11 mx-auto my-3 ">
+    <h3 class="h3">2022</h3>
+  </div>
+  <div class="row pb-3 justify-content-evenly">
+    <div class="col-lg-2 text-center">
+      <div class="card text-center">
+        <img alt="{{alt[0]}}"style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[0]}}">
+        <div class="card-body">
+          <h5 class="card-title">Bikes for work</h5>
+          <p class="card-text">We are part of a program that helps individuals who need transportation to work by using a program that gives them a bike to get to work with.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-2 text-center">
+      <div class="card text-center">
+        <img alt="{{alt[1]}}"style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[1]}}">
+      </div>
+    </div>
+  </div>
+
+  <div class="row pb-3 justify-content-evenly">
+    <div class="col-lg-2 text-center">
+      <div class="card text-center">
+        <img alt="{{alt[2]}}"style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[2]}}">
+        <div class="card-body">
+          <h5 class="card-title">Bikes for work</h5>
+          <p class="card-text">We are part of a program that helps individuals who need transportation to work by using a program that gives them a bike to get to work with.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-2 text-center">
+      <div class="card text-center">
+        <img alt="{{alt[3]}}"style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[3]}}">
+        <div class="card-body">
+          <h5 class="card-title">Cecelia Presenting NWASST</h5>
+          <p class="card-text">This was one of many successfull events where we had the opportunity to share with youth.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
