--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -47,7 +47,7 @@ alt: ['bikes for transport to work', 'class about starting a daycare','Non-Profi
       <div class="card text-center">
         <img alt="{{alt[2]}}"style="aspect-ratio: 1 / 1;" class="d-block fuild-img" src="{{site.img_url + images[2]}}">
         <div class="card-body">
-          <h5 class="card-title">Bikes for work</h5>
+          <h5 class="card-title">Non-Profit Conference</h5>
         </div>
       </div>
     </div>
