updated to remove the outreach page

--- a/src/outreach.njk
+++ b/src/outreach.njk
@@ -20,7 +20,7 @@ alt: ['bikes for transport to work', 'class about starting a daycare','Non-Profi
 </div>
 <!-- End Page Intro -->
 <hr class="featurette-divider">
-<!-- Wrap the rest of the page in another container to center all the content. -->
+<!-- Wrap the rest of the page in another container to center all the content.
 
 <div class="p-3 text-center">
   <div class="col-md-11 mx-auto my-3 ">
@@ -62,3 +62,5 @@ alt: ['bikes for transport to work', 'class about starting a daycare','Non-Profi
   </div>
 </div>
 </div>
+
+-->
