--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -109,7 +109,7 @@ html {
   .bg-white-transparent {
     background-color: rgba(255, 255, 255, 0.9);
   }
-  .bg-transparent {
+  .bg-blue-transparent {
     background-color: rgba(20, 150, 255, 0.9);
   }
   /*********************** links ******************************************/
