updated css for nwa gives img

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,9 +7,9 @@ rel: canonical
 robots: follow, index
 ---
 <div class="row justify-content-center text-center">
-  <div class="col-md-10 p-3 my-5  bg-blue-transparent rounded">
+  <div class="col-md-10 p-3 my-5  bg-blue-transparent rounded max-width">
     <p class="lead p-3 ">NWA Second Stage Transition is partnering with NWA Gives for our Spring fundraiser.</p>
-    <img src="https://www.nwasecondstagetransition.org/img/NWA-Gives-Logo-White.png" class="img-responsive" alt="NWA Gives Logo">
+    <img src="https://www.nwasecondstagetransition.org/img/NWA-Gives-Logo-White.png" class="img-responsive img-fluid" alt="NWA Gives Logo">
     <p class="lead mt-3"><a class="btn text-black bg-warning" href="https://www.nwagives.org/organization/Nwa-Second-Stage-Transition" target="_self" rel="noopener noreferrer" >Find out about our fundraser.</a></p>
   </div>
   <!--
